# seithar

./: .gitignore  LICENSE  MISSION.md  README.md  pyproject.toml  setup.py
docs/: AGENT-GUIDE.md  ARCHITECTURE.md  MCP-ARCHITECTURE.md  QUICKSTART.md  TAXONOMY.md
seithar/: __init__.py  analytics.py  api.py  autoprompt_daemon.py  bot_runtime.py  cli.py  collector.py  community_intel.py  context_engine.py  cot_integrity.py  dashboard.py  evasion.py  identity_gen.py  injection_detector.py  knight_eye.py  knight_eye_mcp.py  middleware.py  monitor_evasion.py  orchestrator.py  persona_session.py  sensor.py  shield.py  threat_intel.py  threat_mapper.py  tool_response_shield.py  trust_boundary.py
seithar/core/: __init__.py  frameworks.py  taxonomy.py  types.py
seithar/inoculator/: __init__.py  inoculator.py
seithar/intel/: __init__.py  arxiv.py  feeds.py  scorer.py
seithar/mcp/: __init__.py  __main__.py  loop_detector.py  server.py  taxonomy_surface.py  tool_filter.py
seithar/profiler/: __init__.py  (+1 more)
tests/: test_analytics.py  test_bot_runtime.py  test_cli.py  test_collector.py  test_community_intel.py  test_context_engine.py  test_cot_integrity.py  test_evasion.py  test_feeds.py  test_frameworks.py  test_identity_gen.py  test_inoculator.py  test_intel.py  test_loop_detector.py  test_mcp.py  test_middleware.py  test_monitor_evasion.py  test_orchestrator.py  test_persona_session.py  test_profiler.py  test_scanner.py  test_shield.py  test_taxonomy.py  test_threat_intel.py  test_tool_filter.py  test_tool_response_shield.py  test_trust_boundary.py  test_types.py
(+2 files in other folders)
