[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seithar"
version = "0.1.0"
description = "Cognitive warfare defense and analysis platform. Scanner, inoculator, threat intelligence, substrate profiling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Seithar Group", email = "research@seithar.com"},
]
keywords = ["cognitive-warfare", "disinformation", "threat-intelligence", "inoculation", "DISARM"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
seithar = "seithar.cli:main"

[project.urls]
Homepage = "https://github.com/Mirai8888/seithar"
Repository = "https://github.com/Mirai8888/seithar"
Documentation = "https://github.com/Mirai8888/seithar/tree/main/docs"

[tool.setuptools.packages.find]
include = ["seithar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
